--- a/src/PP.Wpf/PP.Wpf.csproj
+++ b/src/PP.Wpf/PP.Wpf.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFrameworks>net452;net462;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <Version>1.0.7</Version>
     <PackageProjectUrl>https://github.com/LowPlayer/PP.Wpf</PackageProjectUrl>
